--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,13 @@
 }
 h1,h2,h3,h4,h5{
    font-family: 'DM Serif Display', serif;
-}
+  }
 a{
    text-decoration: none;
 }
 
 body{
-   scroll-behavior: smooth;
+   /* scroll-behavior: smooth; */
    font-family: 'Karla', sans-serif;
    width: 100vw;
    height: 100vh;
@@ -64,6 +64,7 @@ header{
    display: flex;
 }
 #main{
+   width: 100%;
    position: relative;
    height: 900px;
    padding-top: 100px;
@@ -90,7 +91,7 @@ header{
 }
 .left{
    width: 50%;
-   height: 100%;
+   height: 100px;
    display: flex;
    flex-direction: column;
    /* background-color: teal; */
@@ -101,11 +102,11 @@ header{
    border-top: solid 2px white;
 }
 .left h1{
-   width: 90%;
-   margin-top: 60px;
+   /* width: 90%; */
+   /* margin-top: 60px; */
    color: white;
    font-weight: 400;
-   font-size: 70px;
+   font-size: 65px;
    line-height: 1;
 }
 .left p{
@@ -125,7 +126,7 @@ header{
 
 .right{
    width: 50%;
-   height: 100%;
+   /* height: 100%; */
 }
 .right img{
    width: 100%;
@@ -217,13 +218,17 @@ footer{
 }
 .liens{
    display: flex;
+   flex-wrap: wrap;
+
    /* justify-content: space-between; */
 }
 .lien{
    margin-top: 40px;
-   margin-right: 130px;
+   margin-right: 30px;
    display: flex;
    flex-direction: column;
+   width: 20%;
+
 }
 .lien a{
    z-index: 2;
@@ -234,4 +239,56 @@ footer{
 .lien a:first-child{
    color :hsl(273, 4%, 51%);
    margin-bottom: 30px;
+}
+
+
+@media screen and (max-width: 376px){
+   header {
+      height: 50px;
+   }
+   .container{
+      width: 100%;
+      /* background-color: cadetblue; */
+   }
+   #menu img{
+      width: 20%;
+      margin-left:20px ;
+   }
+   #navigation{
+      display: none;
+   }
+
+  
+   #main{
+      padding: 0;
+   }
+   .mainContainer{
+      flex-direction: column;
+   }
+   #bgMain{
+      display: none;
+   }
+   .left{
+      order: 2;
+      width: 100%;
+      background-color: hsl(256, 26%, 20%);
+
+   }
+   .line{
+      display: none;
+   }
+   .right{
+      width: 100%;
+      order: 1;
+      /* height:auto; */
+      background-color: crimson;
+   }
+   .right img{
+      /* margin: 0; */
+      width: 100%;
+      height: auto;
+      /* padding: 0; */
+      /* object-fit: cover;
+      object-position: center; */
+   }
 }
